set up home page

--- a/Capstone.Web/Views/Home/Index.cshtml
+++ b/Capstone.Web/Views/Home/Index.cshtml
@@ -1,4 +1,21 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IList<Park>
+@{
+    ViewData["Title"] = "National Park Geek";
 }
 
+@foreach (var park in Model)
+{
+<div class="flexcontainerhome">
+    <div class="homeimagediv">
+        <a asp-controller="home" asp-action="parkdetails" asp-route-parkcode="@park.ParkCode">
+            <img src="~/images/parks/@(park.ParkCode).jpg" class="homeimage" />
+        </a>
+    </div>
+    <div class="homeparkdesc">
+        <h3>@park.ParkName</h3>
+        <p>@park.ParkDescription</p>
+    </div>
+</div>
+
+
+}
