--- a/Capstone.Web/wwwroot/css/site.css
+++ b/Capstone.Web/wwwroot/css/site.css
@@ -27,14 +27,6 @@ body {
     margin: 15px;
 }
 
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none;
-    }
-}
-
 .topbanner {
     height: 100px;
     width: 100%;
@@ -77,7 +69,8 @@ body {
 
 .detailcontainer{
     display: grid;
-    grid-template-columns: 1fr, 1fr, 1fr, 1fr;
+    width: 100%;
+    grid-template-columns: 1fr, 1fr, 1fr, 1fr 1fr;
     grid-template-areas: "parkname"
                          "parkdetails"
                          "forecast1, forecast2, forecast3, forecast4, forecast5"                            
@@ -97,23 +90,53 @@ body {
     grid-area: parkdetails;
 }
 
-.firstforecast{
+.firstforecast {
+    display: inline-block;
+    margin-left: 20px;
+    margin-right: 20px;
     grid-area: forecast1;
 }
 
-.secondforecast{
+.secondforecast {
+    display: inline-block;
+    margin-left: 20px;
+    margin-right: 20px;
     grid-area: forecast2;
 }
 
-.thirdforecast{
+.thirdforecast {
+    display: inline-block;
+    margin-left: 20px;
+    margin-right: 20px;
     grid-area: forecast3;
 }
 
-.fourthforecast{
+.fourthforecast {
+    display: inline-block;
+    margin-left: 20px;
+    margin-right: 20px;
     grid-area: forecast4;
 }
 
-.fifthforecast{
+.fifthforecast {
+    display: inline-block;
+    margin-left: 20px;
+    margin-right: 20px;
     grid-area: forecast5;
+}
+
+#firstday{
+    margin-top: 0;
+    width: 200px;
+}
+
+#restofweek{
+    width: 100px;
+}
+
+#forecasttext{
+    font-size: 1.4rem;
+    font-weight: initial;
+    text-align: center;
 }
 
