added weather conditionals, switched to flexbox for weather divs

--- a/Capstone.Web/Views/Home/ParkDetails.cshtml
+++ b/Capstone.Web/Views/Home/ParkDetails.cshtml
@@ -8,77 +8,214 @@
 <img src="~/images/parks/@(Model.ParkCode).jpg" class="parkimage" />
 
 
+<p>@Model.ParkDescription</p>
 
-<div class="parkdetails" style="min-width: 900px">
-    <p>@Model.ParkDescription</p>
+<ul>
+    <li>Located In: @Model.State</li>
+    <li>Founded In: @Model.YearFounded</li>
+    <li>Climate: @Model.Climate</li>
+    <li>@Model.Acreage Acres in the Park</li>
+    <li>@Model.ElevationInFeet ft. Elevation</li>
+    <li>@Model.MilesOfTrail mi. of Trail</li>
+    <li>@Model.NumberOfCampsites Campsites</li>
+    <li>@Model.AnnualVisitorCount Visitors Each Year</li>
+    <li>@Model.NumberOfAnimalSpecies Species of Animal in the Park</li>
+    <br />
 
-    <ul>
-        <li>Located In: @Model.State</li>
-        <li>Founded In: @Model.YearFounded</li>
-        <li>Climate: @Model.Climate</li>
-        <li>@Model.Acreage Acres in the Park</li>
-        <li>@Model.ElevationInFeet ft. Elevation</li>
-        <li>@Model.MilesOfTrail mi. of Trail</li>
-        <li>@Model.NumberOfCampsites Campsites</li>
-        <li>@Model.AnnualVisitorCount Visitors Each Year</li>
-        <li>@Model.NumberOfAnimalSpecies Species of Animal in the Park</li>
-        <br />
-
-        @if (Model.EntryFee != 0)
+    @if (Model.EntryFee != 0)
+    {
+        <li>@Model.EntryFee.ToString("C") Park Entry Fee</li>
+    }
+</ul>
+<div class="forecastcontainer">
+    @foreach (var forecast in Model.Forecasts)
+    {
+        if (forecast.Day == 1)
         {
-            <li>@Model.EntryFee.ToString("C") Park Entry Fee</li>
+            <div class="firstforecast">
+                <img src="~/images/weather/@(forecast.Forecast).png" id="firstday" />
+                <br />
+                <p id="forecasttext">High: @(forecast.High)ºF&emsp;Low: @(forecast.Low)ºF</p>
+                @if (forecast.Forecast == "snow")
+                {
+                    <p id="forecastwarning">Pack snowshoes</p>
+                }
+                @if (forecast.Forecast == "rain")
+                {
+                    <p id="forecastwarning">Pack rain gear and wear waterproof shoes</p>
+                }
+                @if (forecast.Forecast == "thunderstorms")
+                {
+                    <p id="forecastwarning">Seek shelter and avoid hiking on exposed ridges</p>
+                }
+                @if (forecast.Forecast == "sunny")
+                {
+                    <p id="forecastwarning">Pack sunblock</p>
+                }
+                @if (forecast.High > 75)
+                {
+                    <p id="forecastwarning">Bring an extra gallon of water</p>
+                }
+                @if (forecast.High - forecast.Low > 20)
+                {
+                    <p id="forecastwarning">Wear breathable layers</p>
+                }
+                @if (forecast.Low < 20)
+                {
+                    <p id="forecastwarning">Beware of exposure to frigid temperatures</p>
+                }
+            </div>
+
         }
-    </ul>
-    <div style="width: 100%">
-        @foreach (var forecast in Model.Forecasts)
+        if (forecast.Day == 2)
         {
-            if (forecast.Day == 1)
-            {
-                <div class="firstforecast">
-                    <img src="~/images/weather/@(forecast.Forecast).png" id="firstday"/>
-                    <br />
-                    <p id="forecasttext">High: @(forecast.High)ºF&emsp;Low: @(forecast.Low)ºF</p>
-                </div>
+            <div class="secondforecast">
+                <img src="~/images/weather/@(forecast.Forecast).png" id="restofweek" />
+                <p id="forecasttext">High: @(forecast.High)ºF</p>
+                <p id="forecasttext">Low: @(forecast.Low)ºF</p>
+                @if (forecast.Forecast == "snow")
+                {
+                    <p id="forecastwarning">Pack snowshoes</p>
+                }
+                @if (forecast.Forecast == "rain")
+                {
+                    <p id="forecastwarning">Pack rain gear and wear waterproof shoes</p>
+                }
+                @if (forecast.Forecast == "thunderstorms")
+                {
+                    <p id="forecastwarning">Seek shelter and avoid hiking on exposed ridges</p>
+                }
+                @if (forecast.Forecast == "sunny")
+                {
+                    <p id="forecastwarning">Pack sunblock</p>
+                }
+                @if (forecast.High > 75)
+                {
+                    <p id="forecastwarning">Bring an extra gallon of water</p>
+                }
+                @if (forecast.High - forecast.Low > 20)
+                {
+                    <p id="forecastwarning">Wear breathable layers</p>
+                }
+                @if (forecast.Low < 20)
+                {
+                    <p id="forecastwarning">Beware of exposure to frigid temperatures</p>
+                }
+            </div>
 
-            }
-            if (forecast.Day == 2)
-            {
-                <div class="secondforecast">
-                    <img src="~/images/weather/@(forecast.Forecast).png" id="restofweek" />
-                    <p id="forecasttext">High: @(forecast.High)ºF</p>
-                    <p id="forecasttext">Low: @(forecast.Low)ºF</p>
-                </div>
-
-            }
-            if (forecast.Day == 3)
-            {
-                <div class="thirdforecast">
-                    <img src="~/images/weather/@(forecast.Forecast).png" id="restofweek" />
-                    <p id="forecasttext">High: @(forecast.High)ºF</p>
-                    <p id="forecasttext">Low: @(forecast.Low)ºF</p>
-                </div>
-
-            }
-            if (forecast.Day == 4)
-            {
-                <div class="fourthforecast">
-                    <img src="~/images/weather/@(forecast.Forecast).png" id="restofweek" />
-                    <p id="forecasttext">High: @(forecast.High)ºF</p>
-                    <p id="forecasttext">Low: @(forecast.Low)ºF</p>
-                </div>
-
-            }
-            if (forecast.Day == 5)
-            {
-                <div class="fifthforecast">
-                    <img src="~/images/weather/@(forecast.Forecast).png" id="restofweek" />
-                    <p id="forecasttext">High: @(forecast.High)ºF</p>
-                    <p id="forecasttext">Low: @(forecast.Low)ºF</p>
-                </div>
-
-            }
         }
-    </div>
+        if (forecast.Day == 3)
+        {
+            <div class="thirdforecast">
+                <img src="~/images/weather/@(forecast.Forecast).png" id="restofweek" />
+                <p id="forecasttext">High: @(forecast.High)ºF</p>
+                <p id="forecasttext">Low: @(forecast.Low)ºF</p>
+                @if (forecast.Forecast == "snow")
+                {
+                    <p id="forecastwarning">Pack snowshoes</p>
+                }
+                @if (forecast.Forecast == "rain")
+                {
+                    <p id="forecastwarning">Pack rain gear and wear waterproof shoes</p>
+                }
+                @if (forecast.Forecast == "thunderstorms")
+                {
+                    <p id="forecastwarning">Seek shelter and avoid hiking on exposed ridges</p>
+                }
+                @if (forecast.Forecast == "sunny")
+                {
+                    <p id="forecastwarning">Pack sunblock</p>
+                }
+                @if (forecast.High > 75)
+                {
+                    <p id="forecastwarning">Bring an extra gallon of water</p>
+                }
+                @if (forecast.High - forecast.Low > 20)
+                {
+                    <p id="forecastwarning">Wear breathable layers</p>
+                }
+                @if (forecast.Low < 20)
+                {
+                    <p id="forecastwarning">Beware of exposure to frigid temperatures</p>
+                }
+            </div>
+
+        }
+        if (forecast.Day == 4)
+        {
+            <div class="fourthforecast">
+                <img src="~/images/weather/@(forecast.Forecast).png" id="restofweek" />
+                <p id="forecasttext">High: @(forecast.High)ºF</p>
+                <p id="forecasttext">Low: @(forecast.Low)ºF</p>
+                @if (forecast.Forecast == "snow")
+                {
+                    <p id="forecastwarning">Pack snowshoes</p>
+                }
+                @if (forecast.Forecast == "rain")
+                {
+                    <p id="forecastwarning">Pack rain gear and wear waterproof shoes</p>
+                }
+                @if (forecast.Forecast == "thunderstorms")
+                {
+                    <p id="forecastwarning">Seek shelter and avoid hiking on exposed ridges</p>
+                }
+                @if (forecast.Forecast == "sunny")
+                {
+                    <p id="forecastwarning">Pack sunblock</p>
+                }
+                @if (forecast.High > 75)
+                {
+                    <p id="forecastwarning">Bring an extra gallon of water</p>
+                }
+                @if (forecast.High - forecast.Low > 20)
+                {
+                    <p id="forecastwarning">Wear breathable layers</p>
+                }
+                @if (forecast.Low < 20)
+                {
+                    <p id="forecastwarning">Beware of exposure to frigid temperatures</p>
+                }
+            </div>
+
+        }
+        if (forecast.Day == 5)
+        {
+            <div class="fifthforecast">
+                <img src="~/images/weather/@(forecast.Forecast).png" id="restofweek" />
+                <p id="forecasttext">High: @(forecast.High)ºF</p>
+                <p id="forecasttext">Low: @(forecast.Low)ºF</p>
+                @if (forecast.Forecast == "snow")
+                {
+                    <p id="forecastwarning">Pack snowshoes</p>
+                }
+                @if (forecast.Forecast == "rain")
+                {
+                    <p id="forecastwarning">Pack rain gear and wear waterproof shoes</p>
+                }
+                @if (forecast.Forecast == "thunderstorms")
+                {
+                    <p id="forecastwarning">Seek shelter and avoid hiking on exposed ridges</p>
+                }
+                @if (forecast.Forecast == "sunny")
+                {
+                    <p id="forecastwarning">Pack sunblock</p>
+                }
+                @if (forecast.High > 75)
+                {
+                    <p id="forecastwarning">Bring an extra gallon of water</p>
+                }
+                @if (forecast.High - forecast.Low > 20)
+                {
+                    <p id="forecastwarning">Wear breathable layers</p>
+                }
+                @if (forecast.Low < 20)
+                {
+                    <p id="forecastwarning">Beware of exposure to frigid temperatures</p>
+                }
+            </div>
+
+        }
+    }
 </div>
 
 
