--- a/Capstone.Web/Views/Survey/Index.cshtml
+++ b/Capstone.Web/Views/Survey/Index.cshtml
@@ -5,28 +5,35 @@
 
 <h2>Please take a brief survey</h2>
 
-<form asp-controller="survey" asp-action="index" method="post">
-    <div>
-        <label asp-for="ParkCode">Park Name</label>
-        <select asp-for="ParkCode" asp-items="SurveyResult.parks"></select>
 
-    </div>
-    <div>
-        <label asp-for="EmailAddress">Email Address</label>
-        <input asp-for="EmailAddress" />
-        <span asp-validation-for="EmailAddress"></span>
-    </div>
-    <div>
-        <label asp-for="State">State of Residence</label>
-        <input asp-for="State" />
-        <span asp-validation-for="State"></span>
-    </div>
-    <div>
-        <label asp-for="ActivityLevel">What is Your Level of Activity</label>
-        <select asp-for="ActivityLevel" asp-items="SurveyResult.activityLevel"></select>
-        <span asp-validation-for="ActivityLevel"></span>
-    </div>
+<form asp-controller="survey" asp-action="index" method="post">
+    <table>
+        <tbody>
+            <tr>
+                <td id="park-survey-table"><label asp-for="ParkCode">Park Name</label></td>
+                <td><select asp-for="ParkCode" asp-items="SurveyResult.parks"></select></td>
+
+            </tr>
+            <tr>
+                <td id="park-survey-table"><label asp-for="EmailAddress">Email Address</label></td>
+                <td><input asp-for="EmailAddress" />
+                <span asp-validation-for="EmailAddress"></span></td>
+            </tr>
+            <tr>
+                <td id="park-survey-table"><label asp-for="State">State of Residence</label></td>
+                <td><input asp-for="State" />
+                <span asp-validation-for="State"></span></td>
+            </tr>
+            <tr>
+                <td id="park-survey-table"><label asp-for="ActivityLevel">What is Your Level of Activity</label></td>
+                <td><select asp-for="ActivityLevel" asp-items="SurveyResult.activityLevel"></select></td>
+                <td><span asp-validation-for="ActivityLevel"></span></td>
+            </tr>
+        </tbody>
+    </table>
     <input type="submit" value="Submit Survey" />
 
 </form>
+
+
 
