--- a/Capstone.Web/Views/Survey/Index.cshtml
+++ b/Capstone.Web/Views/Survey/Index.cshtml
@@ -35,8 +35,9 @@
                     </tr>
                 </tbody>
             </table>
-            <input type="submit" value="Submit Survey" />
-
+            <div align="center">
+                <input id="survey-button" type="submit" value="Submit Survey" />
+            </div>
         </form>
     </div>
 
