--- a/Capstone.Web/wwwroot/css/site.css
+++ b/Capstone.Web/wwwroot/css/site.css
@@ -249,3 +249,10 @@ ul.nav a {
     text-align:center;
     color: navajowhite;
 }
+
+#survey-button{
+    background-color: forestgreen;
+    color: navajowhite;
+    margin-left:auto;
+    margin-right:auto;
+}
